implement Item Transaction

--- a/.env
+++ b/.env
@@ -15,6 +15,14 @@ DB_USERNAME=root
 DB_PASSWORD=root
 DB_PORT=3306
 
+TEST_DB_HOST=127.0.0.1
+TEST_DB_DATABASE=vestiaire_test1
+TEST_DB_USERNAME=root
+TEST_DB_PASSWORD=root
+TEST_DB_PORT=3306
+TEST_DB_CONNECTION=mysql
+
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
